# living-ink

./: .gitignore  LICENSE  README.md  build_binary.sh  build_installer.sh  com.aaron.remarkable.sync.plist  config.py  config.yml.example  deploy_automation.sh  install_automation.sh  package-lock.json  pyproject.toml  run_remarkable_sync.command  run_remarkable_to_apple_notes.sh  server.json  server.py
.github/: copilot-instructions.md
docs/: PARKING_LOT.md  REFACTOR_PLAN.md  SETUP_GUIDE.md  TEST_PLAN.md  USER_MANUAL.md  automation_setup.md  execution_plan_folder_mapping.md  resources.md  ssh-setup.md
packaging/: com.aaron.livingink.plist  install_service.command  uninstall.command
packaging/scripts/: postinstall
remarkable_mcp/: __init__.py  capabilities.py  clean.py  cli.py  destinations.py  extract.py  openai_cleanup_prompt.txt  ssh.py  tools.py
scripts/: process_notebook.py  set_env.sh  white_background.py
